Rorder UI elements - todo: fix chart height on smaller screens

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -29,7 +29,6 @@ body {
     .app {
       width: 100%;
       height: 100%;
-      overflow: auto;
       display: flex;
       align-items: center;
       justify-content: center;
