--- a/src/scss/SortPage.scss
+++ b/src/scss/SortPage.scss
@@ -8,28 +8,31 @@ $border-radius: 10px;
   width: 100%;
   min-width: 10px;
   height: 100%;
-  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: auto;
 
+  @media (max-width: 1200px) {
+    background: white;
+  }
 
   .window {
     padding: 20px;
     background: rgb(255, 255, 255);
     box-shadow: 0 0 150px 36px rgba(0, 117, 255, 0.26);
     display: flex;
+    min-width: 10px;
     flex-direction: column;
     width: 1500px;
     height: 700px;
     border-radius: $border-radius;
-    overflow: auto;
 
     @media (max-width: 1200px) {
       padding: 10px;
       flex-direction: column;
       width: 100%;
-      height: 100%;
+      height: 120%;
       box-shadow: none;
       border-bottom-right-radius: 0;
       border-top-right-radius: 0;
